# LLM-KG-Generator

./: README.md  ana.py  arango_query_interface.py  community_answer_interface.py  community_summary_interface.py  kg_interface.py  main.py  models.py  pyproject.toml  summary_update_interface.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  chat.js
