[tool.poetry]
name = "llm-kg"
version = "0.1.0"
description = "Generating kg with llm"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiohttp = "3.9.1"
attrs = "23.1.0"
click = "8.1.7"
comm = "0.1.4"
deprecated = "~=1.2.14"
fastapi = "~=0.100.0"
igraph = "~=0.11.6"
leidenalg = "~=0.10.2"
matplotlib = "~=3.10.0"
networkx = "~=3.4.2"
openai = "~=1.63.0"
pydantic = "~=2.7.4"
pygments = "2.16.1"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-magic = "0.4.27"
pyyaml = "6.0.1"
regex = "2023.8.8"
requests = "2.31.0"
starlette = "~=0.27.0"
tiktoken = "~=0.7.0"
uvicorn = "~=0.23.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
